--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,66 +1,98 @@
 <!-- SLIDER -->
 <div class="swiper-container">
-    <!-- Additional required wrapper -->
     <div class="swiper-wrapper">
-      <!-- Slides -->
-      <div class="swiper-slide"><img src="assets/img/slider/slider1.jpg" alt="drone-tamiri-slider"></div>
-      <div class="swiper-slide"><img src="assets/img/slider/slider2.jpg" alt="drone-yedek-parca-ve-aksesuar-slider"></div>
-      <div class="swiper-slide"><img src="assets/img/slider/slider3.jpg" alt="yeni-drone-satin-al-2-yil-boyunca-teknik-serviste-yuzde-5-indirim-kazan-slider"></div>
+        <div class="swiper-slide">
+            <a href="/teknik-servis">
+                <img src="assets/img/slider/dji-destek-yetkili-teknik-servis.jpg" alt="dji-destek-yetkili-teknik-servis" class="desktop">
+                <img src="assets/img/slider/dji-destek-yetkili-teknik-servis-mobile.jpg" alt="dji-destek-yetkili-teknik-servis" class="mobile">
+            </a>
+        </div>
     </div>
-  
-    <!-- If we need scrollbar -->
     <div class="swiper-scrollbar"></div>
 </div>
 
 <!-- THREE-CARDS -->
-<section class="three-cards">
+<section class="page-cards">
     <div class="container">
-        <div class="part-3">
-            <div class="three-card">
-                <a href="teknik-servis">
-                    <div class="texts">
-                        <div class="texts-inside">
-                            <h2>Teknik Servis</h2>
-                            <p>Hemen iletişime geçin, ürününüzü eskisinden daha iyi hale getirelim.</p>
-                        </div>
+
+        <div class="card-cover col-md-6 col-xs-12">
+            <a href="/teknik-servis" class="card">
+                <div class="texts">
+                    <div class="texts-inside">
+                        <h2>Teknik Servis</h2>
+                        <p>Hemen iletişime geçin, ürününüzü eskisinden daha iyi hale getirelim.</p>
                     </div>
-                    <div class="image">
-                        <img src="/assets/img/blog/teknik-servis-islemleri.jpg" alt="yeni-drone-satın-al-2-yil-boyunca-teknik-serviste-yuzde-5-indirim-kap-slider">
-                    </div>
-                </a>
-            </div>
+                </div>
+                <div class="image">
+                    <img src="/assets/img/blog/teknik-servis-islemleri.jpg" alt="teknik-servis-islemleri.jpg">
+                </div>
+            </a>
         </div>
     
-        <div class="part-3">
-            <div class="three-card">
-                <a href="magaza">
-                    <div class="texts">
-                        <div class="texts-inside">
-                            <h2>Yedek Parça & Aksesuar</h2>
-                            <p>FPV gözlüğü, özel çantalar, yedek batarya ve birçok ürün için mağazamızı ziyaret edin.</p>
-                        </div>
+        <div class="card-cover col-md-6 col-xs-12">
+            <a href="/magaza" class="card">
+                <div class="texts">
+                    <div class="texts-inside">
+                        <h2>Mağaza</h2>
+                        <p>FPV gözlüğü, özel çantalar, yedek batarya ve birçok ürün için mağazamızı ziyaret edin.</p>
                     </div>
-                    <div class="image">
-                        <img src="/assets/img/blog/drone-yedek-parca-ve-aksesuar.png" alt="drone-yedek-parca-ve-aksesuar-slider">
-                    </div>
-                </a>
-            </div>
+                </div>
+                <div class="image">
+                    <img src="/assets/img/blog/drone-yedek-parca-ve-aksesuar.png" alt="drone-yedek-parca-ve-aksesuar.png">
+                </div>
+            </a>
         </div>
     
-        <div class="part-3">
-            <div class="three-card">
-                <a href="blog">
-                    <div class="texts">
-                        <div class="texts-inside">
-                            <h2>Blog</h2>
-                            <p>Drone nasıl daha iyi kullanılır? Drone'larınızı nasıl tamir ediyoruz? Blog sayfamızda daima güncel içeriklerimizle sizleri bekliyoruz.</p>
-                        </div>
+        <div class="card-cover col-md-6 col-xs-12">
+            <a href="/blog" class="card">
+                <div class="texts">
+                    <div class="texts-inside">
+                        <h2>Blog</h2>
+                        <p>Drone nasıl daha iyi kullanılır? Drone'larınızı nasıl tamir ediyoruz? Blog sayfamızda daima güncel içeriklerimizle sizleri bekliyoruz.</p>
                     </div>
-                    <div class="image">
-                        <img src="/assets/img/blog/dronelar-nasil-ucar.jpg" alt="drone-tamiri-slider">
-                    </div>
-                </a>
-            </div>
+                </div>
+                <div class="image">
+                    <img src="/assets/img/blog/dronelar-nasil-ucar.jpg" alt="dronelar-nasil-ucar.jpg">
+                </div>
+            </a>
         </div>
+
+        <div class="card-cover col-md-6 col-xs-12">
+            <a href="/iletisim" class="card">
+                <div class="texts">
+                    <div class="texts-inside">
+                        <h2>İletişim</h2>
+                        <p>Bizlerle iletişime geçebileceğiniz bütün yollar İletişim sayfamızda.</p>
+                    </div>
+                </div>
+                <div class="image">
+                    <img src="/assets/img/images/wall.jpg" alt="iletisim">
+                </div>
+            </a>
+        </div>
+    </div>
+</section>
+
+<section class="gallery">
+    <div class="container">
+
+        <div class="section-title">
+            <h2>Galeri</h2>
+        </div>
+
+        <div id="lightGallery" class="gallery-images">
+            <a href="/assets/img/images/dji-destek-drone-teknik-servis-ofis.jpg" class="image col-md-4 col-xs-12">
+                <img src="/assets/img/images/dji-destek-drone-teknik-servis-ofis.jpg" alt="dji-destek-drone-teknik-servis-ofis.jpg">
+            </a>
+        
+            <a href="/assets/img/images/dji-mavic-drone-tamir.jpg" class="image col-md-4 col-xs-12">
+                <img src="/assets/img/images/dji-mavic-drone-tamir.jpg" alt="dji-mavic-drone-tamir.jpg">
+            </a>
+
+            <a href="/assets/img/images/dji-phantom-drone-tamir.jpg" class="image col-md-4 col-xs-12">
+                <img src="/assets/img/images/dji-phantom-drone-tamir.jpg" alt="dji-phantom-drone-tamir.jpg">
+            </a>
+        </div>
+
     </div>
 </section>
