--- a/views/layouts/layout-admin.ejs
+++ b/views/layouts/layout-admin.ejs
@@ -176,6 +176,21 @@
 											</ul>
 										</div>
 									</li>
+									<li class="menu-item menu-item-submenu menu-item-rel" data-menu-toggle="click" aria-haspopup="true">
+										<a href="" class="menu-link menu-toggle">
+											<span class="menu-text">Dosyalar</span>
+											<i class="menu-arrow"></i>
+										</a>
+										<div class="menu-submenu menu-submenu-classic menu-submenu-left">
+											<ul class="menu-subnav">
+												<li class="menu-item menu-item-submenu" data-menu-toggle="hover" aria-haspopup="true">
+													<a href="/admin/gorseller" class="menu-link">
+														<span class="menu-text">Görseller</span>
+													</a>
+												</li>
+											</ul>
+										</div>
+									</li>
 								</ul>
 								
 							</div>
