--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -164,7 +164,7 @@
                     </li>
 
                     <li class="navbar-menu-item">
-                        <a href="/magaza">Yedek Parça & Aksesuar</a>
+                        <a href="/magaza">Mağaza</a>
                     </li>
 
                     <li class="navbar-menu-item">
@@ -177,7 +177,58 @@
                 </ul>
             </div>
 
-            <div class="navbar-menu-collapser">
+            <div class="navbar-cart">
+                <div class="cart-header">
+                    <h3>Sepetiniz</h3>
+                </div>
+                <div class="cart-items">
+                    <div class="cart-item">
+                        <div class="cart-item-image">
+                            <a href="/magaza/dji-inspire-2">
+                                <img src="/assets/img/products/inspire.png" alt="">
+                            </a>
+                        </div>
+                        <div class="cart-item-details">
+                            <div class="cart-item-title">
+                                <a href="/magaza/dji-inspire-2">
+                                    <h4>Dji Inspire 2</h4>
+                                </a>
+                            </div>
+                            <div class="cart-item-price">
+                                <div class="cart-item-old-price">
+                                    <p><span class="price">42999</span><span class="sign">₺</span></p>
+                                </div>
+                                <div class="cart-item-current-price">
+                                    <p><span class="price">39999</span><span class="sign">₺</span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cart-item-remove-cover">
+                            <button><i class="fas fa-times"></i></button>
+                        </div>
+                    </div>
+                    <div class="cart-null"><p>Sepetiniz boş.</p></div>
+                </div>
+                <div class="cart-footer">
+                    <div class="cart-total-price">
+                        <p>Toplam: <span class="price">0</span><span class="sign">₺</span></p>
+                    </div>
+                    <div class="cart-parge-button-cover">
+                        <button><i class="fas fa-shopping-cart"></i> Sepete Git</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="navbar-cart-collapser-cover" style="display: none;">
+                <button>
+                    <i class="fas fa-shopping-cart"></i>
+                    <div class="cart-count-product">
+                        <p>0</p>
+                    </div>
+                </button>
+            </div>
+
+            <div class="navbar-menu-collapser-cover">
                 <button><i class="fas fa-bars"></i></button>
             </div>
 
@@ -216,7 +267,7 @@
                     </div>
         
                     <div class="footer-top-part ">
-                        <h3>Yedek Parça & Aksesuar</h3>
+                        <h3>Mağaza</h3>
                         <ul>
                             <li><a href="/magaza">Mağazamız yakında açılacaktır.</a></li>
                         </ul>
@@ -248,7 +299,7 @@
         
                     <ul class="footer-top-bottom-list">
                         <li><a href="/teknik-servis">Teknik Servis</a></li>
-                        <li><a href="/magaza">Yedek Parça ve Aksesuar</a></li>
+                        <li><a href="/magaza">Mağaza</a></li>
                         <li><a href="/blog">Blog</a></li>
                         <li><a href="/iletisim">İletişim</a></li>
                     </ul>
