--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -748,7 +748,8 @@ a:hover{
         color: #111;
         position: absolute;
         right: 25px;
-        top: 12.5px;
+        top: 0;
+        padding: 13px 7.5px
     }
 
     .navbar-menu-item:last-child {
@@ -1194,6 +1195,7 @@ section .section-title{
     .page-cards .card-cover.col-xs-12 {
         width: 100%;
         height: 275px;
+        padding: 10px 0;
     }
 
     .page-cards .card-cover.col-xs-6 {
