--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,20 @@
     <div class="swiper-wrapper">
         <div class="swiper-slide">
             <a href="/teknik-servis">
-                <img src="assets/img/slider/dji-destek-yetkili-teknik-servis.jpg" alt="dji-destek-yetkili-teknik-servis" class="desktop">
-                <img src="assets/img/slider/dji-destek-yetkili-teknik-servis-mobile.jpg" alt="dji-destek-yetkili-teknik-servis" class="mobile">
+                <img src="assets/img/slider/slider1.jpg" alt="dji-yetkili-teknik-servis-ve-satis-hizmetleri" class="desktop">
+                <img src="assets/img/slider/slider1.jpg" alt="dji-yetkili-teknik-servis-ve-satis-hizmetleri" class="mobile">
+            </a>
+        </div>
+        <div class="swiper-slide">
+            <a href="/blog">
+                <img src="assets/img/slider/slider2.jpg" alt="dji-yetkili-teknik-servis-ve-satis-hizmetleri" class="desktop">
+                <img src="assets/img/slider/slider2.jpg" alt="dji-yetkili-teknik-servis-ve-satis-hizmetleri" class="mobile">
+            </a>
+        </div>
+        <div class="swiper-slide">
+            <a href="/iletisim">
+                <img src="assets/img/slider/slider3.jpg" alt="dji-yetkili-teknik-servis-ve-satis-hizmetleri" class="desktop">
+                <img src="assets/img/slider/slider3.jpg" alt="dji-yetkili-teknik-servis-ve-satis-hizmetleri" class="mobile">
             </a>
         </div>
     </div>
