--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1147,6 +1147,7 @@ section .section-title{
     overflow: hidden;
     border-radius: 15px;
     display: block;
+    border: 0;
 }
 
 .page-cards .card:hover .texts{
