--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -322,10 +322,8 @@
                     <p>Tüm Hakları Saklıdır &copy; Dji Destek</p>
                 </div>
         
-                <div class="developer-logo">
-                    <a href="https://yusufcode.com" target="_blank">
-                        <img src="https://yusufcode.com/assets/img/logo/logo.png" alt="yusufcode">
-                    </a>
+                <div class="developer-signature">
+                    <p>This website designed and developed by <a href="https://yusufcode.com" target="_blank">yusufcode.com</a></p>
                 </div>
         
             </div>
