--- a/views/layouts/layout-admin.ejs
+++ b/views/layouts/layout-admin.ejs
@@ -178,6 +178,21 @@
 									</li>
 									<li class="menu-item menu-item-submenu menu-item-rel" data-menu-toggle="click" aria-haspopup="true">
 										<a href="" class="menu-link menu-toggle">
+											<span class="menu-text">MAĞAZA</span>
+											<i class="menu-arrow"></i>
+										</a>
+										<div class="menu-submenu menu-submenu-classic menu-submenu-left">
+											<ul class="menu-subnav">
+												<li class="menu-item menu-item-submenu" data-menu-toggle="hover" aria-haspopup="true">
+													<a href="/admin/urunler" class="menu-link">
+														<span class="menu-text">Ürünler</span>
+													</a>
+												</li>
+											</ul>
+										</div>
+									</li>
+									<li class="menu-item menu-item-submenu menu-item-rel" data-menu-toggle="click" aria-haspopup="true">
+										<a href="" class="menu-link menu-toggle">
 											<span class="menu-text">Dosyalar</span>
 											<i class="menu-arrow"></i>
 										</a>
