--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -3,7 +3,88 @@
 
 <head>
 
-    <%- include('../partials/head') %>
+    <script>
+        if (window.location.host !== 'localhost:5001') {
+            if (location.protocol !== 'https:') {
+                location.replace(`https:${location.href.substring(location.protocol.length)}`);
+            }
+        }
+    </script>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HKY90DJ47R"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-HKY90DJ47R');
+    </script>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-196847632-1">
+    </script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    
+    gtag('config', 'UA-196847632-1');
+    </script>
+    
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PLF5JRL');</script>
+    <!-- End Google Tag Manager -->
+    
+    <!-- TITLE -->
+    <title><%- title %></title>
+    
+    <!-- WEBSITE DESCRIPTION -->
+    <meta name="description" content="<%-description%>">
+    
+    <!-- WEBSITE KEYWORDS -->
+    <meta name="keywords" content="<%-keywords%>">
+    
+    <!-- WEBSITE AUTHOR -->
+    <meta name="author" content="<%-author%>">
+    
+    <!-- META TAGS -->
+    <meta charset="UTF-8">
+    
+    <!-- RESPONSIVE -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    
+    <!-- WEBSITE ICON -->
+    <link rel="icon" href="/assets/img/logo/dji-logo-black.svg" sizes="16x16">
+    
+    <!-- APPLE TOUCH ICON -->
+    <link rel="apple-touch-icon" href="/assets/img/logo/dji-logo-black.svg" sizes="57x57">
+    
+    <!--BOOTSTRAP-->
+    <link rel="stylesheet" href="/assets/css/bootstrap/bootstrap-4.3.1.min.css">
+    
+    <!--FEATHER-->
+    <link rel="stylesheet" href="/assets/css/feather/feather.css">
+    
+    <!--FONTAWESOME-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    
+    <!--SWIPER-->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
+    <!-- LIGHTGALLERY -->
+    <link rel="stylesheet" href="/assets/lightgallery/css/lightgallery.css" />
+    <link rel="stylesheet" href="/assets/lightgallery/css/lg-zoom.css" />
+    <link rel="stylesheet" href="/assets/lightgallery/css/lg-thumbnail.css" />
+    <link rel="stylesheet" href="/assets/lightgallery/css/lg-fullscreen.css" />
+    <link rel="stylesheet" href="/assets/lightgallery/css/lg-transitions.css" />
+    
+    <!-- WEBSITE STYLE -->
+    <link rel="stylesheet" href="/assets/css/style.css?v=3.1">
 
 </head>
 
@@ -219,7 +300,7 @@
                 </div>
             </div>
 
-            <div class="navbar-cart-collapser-cover" style="display: none;">
+            <div class="navbar-cart-collapser-cover">
                 <button>
                     <i class="fas fa-shopping-cart"></i>
                     <div class="cart-count-product">
@@ -332,7 +413,28 @@
     
     </footer>
 
-    <%- include('../partials/foot') %>
+    <!-- JQUERY -->
+    <script src="/assets/js/jquery/jquery-3.5.1.min.js"></script>
+    <script src="/assets/js/jquery/jquery-ui-1.12.1.min.js"></script>
+
+    <!-- BOOTSTRAP -->
+    <script src="/assets/js/bootstrap/popper-1.14.7.min.js"></script>
+    <script src="/assets/js/bootstrap/bootstrap-4.3.1.min.js"></script>
+
+    <!-- SWIPER -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+    <!-- LIGHTGALLERY -->
+    <script src="/assets/lightgallery/lightgallery.min.js"></script>
+    <script src="/assets/lightgallery/plugins/zoom/lg-zoom.min.js"></script>
+    <script src="/assets/lightgallery/plugins/thumbnail/lg-thumbnail.min.js"></script>
+    <script src="/assets/lightgallery/plugins/fullscreen/lg-fullscreen.min.js"></script>
+    <script src="/assets/lightgallery/plugins/hash/lg-hash.min.js"></script>
+    <script src="/assets/lightgallery/plugins/relativeCaption/lg-relative-caption.min.js"></script>
+
+    <!-- SCRIPTS -->
+    <script src="/assets/js/scripts.js?v=2.0.1"></script>
+    <script src="/assets/js/scripts-ajax.js?v=1.0.0"></script>
     
 </body>
 
