shopping cart collapser hided

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -300,7 +300,7 @@
                 </div>
             </div>
 
-            <div class="navbar-cart-collapser-cover">
+            <div class="navbar-cart-collapser-cover" style="display: none;">
                 <button>
                     <i class="fas fa-shopping-cart"></i>
                     <div class="cart-count-product">
